--- a/WebAppService/Views/Blog/Blog.cshtml
+++ b/WebAppService/Views/Blog/Blog.cshtml
@@ -1,11 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Blog";
 }
-<link href="~/assets/css/swiper-bundle.min.css" rel="stylesheet" />
-
+<link href="~/web/assets/css/swiper-bundle.min.css" rel="stylesheet" />
 @section Scripts {
-    <script src="~/assets/js/swiper-bundle.min.js"></script>
-    <script src="~/assets/js/swiper-dom.js"></script>
+    <script src="~/web/assets/js/swiper-bundle.min.js"></script>
+    <script src="~/web/assets/js/swiper-dom.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dot/doT.min.js"></script>
     <script>
         var myClient = {
@@ -65,7 +64,7 @@
     </script>
 }
 <div class="entry-header entry-header-2 mb-0 mt-0 text-center">
-    <div class="thumb-overlay img-hover-slide border-radius-5 position-relative" style="background-image: url(/assets/imgs/farme.png)">
+    <div class="thumb-overlay img-hover-slide border-radius-5 position-relative" style="background-image: url(/web/assets/imgs/farme.png)">
     </div>
 </div>
 <div class="container px-30 py-2 container-mobile">
@@ -96,7 +95,7 @@
                                 <div class="d-flex">
                                     <div class="media-body d-flex mr-15 border-radius-5 img-hover-scale">
                                         <a class="color-white" href="single.html">
-                                            <img class="border-radius-5 img-head-1" src="~/assets/imgs/1865e15c9742db31e2ba5663896c58388b381c66.png" alt="">
+                                            <img class="border-radius-5 img-head-1" src="~/web/assets/imgs/1865e15c9742db31e2ba5663896c58388b381c66.png" alt="">
                                         </a>
                                     </div>
                                     <div class="post-content media-body">
@@ -121,7 +120,7 @@
                                 <div class="d-flex">
                                     <div class="media-body d-flex mr-15 border-radius-5 img-hover-scale">
                                         <a class="color-white" href="single.html">
-                                            <img class="border-radius-5 img-head-1" src="~/assets/imgs/1cbe79301c2c399c3dd8f8904850ff848a1c1d33.png" alt="">
+                                            <img class="border-radius-5 img-head-1" src="~/web/assets/imgs/1cbe79301c2c399c3dd8f8904850ff848a1c1d33.png" alt="">
                                         </a>
                                     </div>
                                     <div class="post-content media-body">
@@ -146,7 +145,7 @@
                                 <div class="d-flex">
                                     <div class="media-body d-flex mr-15 border-radius-5 img-hover-scale">
                                         <a class="color-white" href="single.html">
-                                            <img class="border-radius-5 img-head-1" src="~/assets/imgs/1865e15c9742db31e2ba5663896c58388b381c66.png" alt="">
+                                            <img class="border-radius-5 img-head-1" src="~/web/assets/imgs/1865e15c9742db31e2ba5663896c58388b381c66.png" alt="">
                                         </a>
                                     </div>
                                     <div class="post-content media-body">
@@ -171,7 +170,7 @@
                                 <div class="d-flex">
                                     <div class="media-body d-flex mr-15 border-radius-5 img-hover-scale">
                                         <a class="color-white" href="single.html">
-                                            <img class="border-radius-5 img-head-1" src="~/assets/imgs/1cbe79301c2c399c3dd8f8904850ff848a1c1d33.png" alt="">
+                                            <img class="border-radius-5 img-head-1" src="~/web/assets/imgs/1cbe79301c2c399c3dd8f8904850ff848a1c1d33.png" alt="">
                                         </a>
                                     </div>
                                     <div class="post-content media-body">
@@ -215,7 +214,7 @@
                                         <div class="d-flex">
                                             <div class="post-thumb d-flex mr-15 border-radius-5 img-hover-scale">
                                                 <a class="color-white" href="single.html">
-                                                    <img src="/assets/imgs/777be068912ffb3767e6510c19baa27eb663d38b.png" width="145px" height="115px" alt="">
+                                                    <img src="~/web/assets/imgs/777be068912ffb3767e6510c19baa27eb663d38b.png" width="145px" height="115px" alt="">
                                                 </a>
                                             </div>
                                             <div class="post-content media-body">
