--- a/WebAppService/Views/Shared/_Layout.cshtml
+++ b/WebAppService/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             <button class="off-canvas-close"><i class="ti-close"></i></button>
         </aside>
         <!-- Main Header -->
-        <header class="main-header header-style-2">
+        <header class="main-header background-white header-style-2">
             <div class="header-top header-menutop">
                 <div class="contact">
                     <span><i class="fas fa-map-marker-alt"></i> Ha Noi, Viet Nam</span>
