--- a/WebAppService/wwwroot/web/assets/css/main.css
+++ b/WebAppService/wwwroot/web/assets/css/main.css
@@ -1,5 +1,7 @@
 ﻿
-
+.pagination {
+    JUSTIFY-CONTENT: CENTER!important;
+}
 .btn-orrange {
     background-color: #F26522;
     color: white !important;
@@ -406,14 +408,14 @@
     .text-c-6 {
         font-family: 'Inter', sans-serif;
         color: #999999;
-        font-size: 11px;
+        font-size: 9px;
         font-weight: 400;
     }
 
     .text-c-8 {
         font-family: 'Inter', sans-serif;
         color: #999999;
-        font-size: 9px !important;
+        font-size: 7px !important;
         font-weight: 400;
     }
 
